// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "displayName": "Initializer",
  "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "Scope",
      "docs": Object {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Initializer.parameter.Scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "Construct",
            "fqn": "Amazon.CDK.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
    Object {
      "default": undefined,
      "displayName": "Id",
      "docs": Object {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Initializer.parameter.Id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "string",
      },
    },
    Object {
      "default": undefined,
      "displayName": "Props",
      "docs": Object {
        "summary": "- resource properties.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Initializer.parameter.Props",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "optional": true,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "CfnPublicRepositoryProps",
            "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps",
            "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "packageName": "@aws-cdk/aws-ecr",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "using Amazon.CDK.AWS.ECR;

new CfnPublicRepository(Construct Scope, string Id, CfnPublicRepositoryProps Props = null);",
}
`;

exports[`csharp snapshot 2`] = `
" Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.Initializer\\"></a>

\`\`\`csharp
using Amazon.CDK.AWS.ECR;

new CfnPublicRepository(Construct Scope, string Id, CfnPublicRepositoryProps Props = null);
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>Scope</code> | <code>Amazon.CDK.Construct</code> | - scope in which this resource is defined. |
| <code>Id</code> | <code>string</code> | - scoped id of the resource. |
| <code>Props</code> | <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\">CfnPublicRepositoryProps</a></code> | - resource properties. |

---
"
`;

exports[`go snapshot 1`] = `
Object {
  "displayName": "Initializer",
  "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "scope",
      "docs": Object {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Initializer.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "Construct",
            "fqn": "github.com/aws/aws-cdk-go/awscdk/awscdkcore.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
    Object {
      "default": undefined,
      "displayName": "id",
      "docs": Object {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Initializer.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "*string",
      },
    },
    Object {
      "default": undefined,
      "displayName": "props",
      "docs": Object {
        "summary": "- resource properties.",
      },
      "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepository.Initializer.parameter.props",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "optional": true,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "CfnPublicRepositoryProps",
            "fqn": "github.com/aws/aws-cdk-go/awscdkawsecr.CfnPublicRepositoryProps",
            "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "packageName": "@aws-cdk/aws-ecr",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "import \\"github.com/aws/aws-cdk-go/awscdkawsecr\\"

awscdkawsecr.NewCfnPublicRepository(scope Construct, id *string, props CfnPublicRepositoryProps) CfnPublicRepository",
}
`;

exports[`go snapshot 2`] = `
" Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.Initializer\\"></a>

\`\`\`go
import \\"github.com/aws/aws-cdk-go/awscdkawsecr\\"

awscdkawsecr.NewCfnPublicRepository(scope Construct, id *string, props CfnPublicRepositoryProps) CfnPublicRepository
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>scope</code> | <code>github.com/aws/aws-cdk-go/awscdk/awscdkcore.Construct</code> | - scope in which this resource is defined. |
| <code>id</code> | <code>*string</code> | - scoped id of the resource. |
| <code>props</code> | <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\">CfnPublicRepositoryProps</a></code> | - resource properties. |

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "displayName": "Initializer",
  "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "scope",
      "docs": Object {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "Construct",
            "fqn": "software.amazon.awscdk.core.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
    Object {
      "default": undefined,
      "displayName": "id",
      "docs": Object {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "java.lang.String",
      },
    },
    Object {
      "default": undefined,
      "displayName": "repositoryCatalogData",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.repositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "formattingPattern": "java.lang.Object",
      },
    },
    Object {
      "default": undefined,
      "displayName": "repositoryName",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.repositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryName",
      "optional": true,
      "type": Object {
        "formattingPattern": "java.lang.String",
      },
    },
    Object {
      "default": undefined,
      "displayName": "repositoryPolicyText",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.repositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "formattingPattern": "java.lang.Object",
      },
    },
    Object {
      "default": undefined,
      "displayName": "tags",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags",
        ],
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer.parameter.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.tags",
      "optional": true,
      "type": Object {
        "formattingPattern": "java.util.List<%>",
        "types": Array [
          Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "CfnTag",
                "fqn": "software.amazon.awscdk.core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "99.99.99",
              },
            ],
          },
        ],
      },
    },
  ],
  "usage": "import software.amazon.awscdk.services.ecr.CfnPublicRepository;

CfnPublicRepository.Builder.create(Construct scope, java.lang.String id)
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();",
}
`;

exports[`java snapshot 2`] = `
" Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.Initializer\\"></a>

\`\`\`java
import software.amazon.awscdk.services.ecr.CfnPublicRepository;

CfnPublicRepository.Builder.create(Construct scope, java.lang.String id)
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>scope</code> | <code>software.amazon.awscdk.core.Construct</code> | - scope in which this resource is defined. |
| <code>id</code> | <code>java.lang.String</code> | - scoped id of the resource. |
| <code>repositoryCatalogData</code> | <code>java.lang.Object</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code>repositoryName</code> | <code>java.lang.String</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code>repositoryPolicyText</code> | <code>java.lang.Object</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code>tags</code> | <code>java.util.List<software.amazon.awscdk.core.CfnTag></code> | \`AWS::ECR::PublicRepository.Tags\`. |

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "displayName": "Initializer",
  "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "scope",
      "docs": Object {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "Construct",
            "fqn": "aws_cdk.core.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
    Object {
      "default": undefined,
      "displayName": "id",
      "docs": Object {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "str",
      },
    },
    Object {
      "default": undefined,
      "displayName": "repository_catalog_data",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorycatalogdata",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.repository_catalog_data",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "formattingPattern": "typing.Any",
      },
    },
    Object {
      "default": undefined,
      "displayName": "repository_name",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositoryname",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.repository_name",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryName",
      "optional": true,
      "type": Object {
        "formattingPattern": "str",
      },
    },
    Object {
      "default": undefined,
      "displayName": "repository_policy_text",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-repositorypolicytext",
        ],
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.repository_policy_text",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "formattingPattern": "typing.Any",
      },
    },
    Object {
      "default": undefined,
      "displayName": "tags",
      "docs": Object {
        "links": Array [
          "http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecr-publicrepository.html#cfn-ecr-publicrepository-tags",
        ],
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer.parameter.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.tags",
      "optional": true,
      "type": Object {
        "formattingPattern": "typing.List[%]",
        "types": Array [
          Object {
            "formattingPattern": "%",
            "types": Array [
              Object {
                "displayName": "CfnTag",
                "fqn": "aws_cdk.core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "99.99.99",
              },
            ],
          },
        ],
      },
    },
  ],
  "usage": "import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepository(
  scope: Construct,
  id: str,
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)",
}
`;

exports[`python snapshot 2`] = `
" Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.Initializer\\"></a>

\`\`\`python
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepository(
  scope: Construct,
  id: str,
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>scope</code> | <code>aws_cdk.core.Construct</code> | - scope in which this resource is defined. |
| <code>id</code> | <code>str</code> | - scoped id of the resource. |
| <code>repository_catalog_data</code> | <code>typing.Any</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code>repository_name</code> | <code>str</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code>repository_policy_text</code> | <code>typing.Any</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code>tags</code> | <code>typing.List[aws_cdk.core.CfnTag]</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "displayName": "Initializer",
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "scope",
      "docs": Object {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.scope",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "Construct",
            "fqn": "@aws-cdk/core.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
    Object {
      "default": undefined,
      "displayName": "id",
      "docs": Object {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.id",
      "optional": undefined,
      "type": Object {
        "formattingPattern": "string",
      },
    },
    Object {
      "default": undefined,
      "displayName": "props",
      "docs": Object {
        "summary": "- resource properties.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "optional": true,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "CfnPublicRepositoryProps",
            "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "packageName": "@aws-cdk/aws-ecr",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "import { CfnPublicRepository } from '@aws-cdk/aws-ecr'

new CfnPublicRepository(scope: Construct, id: string, props?: CfnPublicRepositoryProps)",
}
`;

exports[`typescript snapshot 2`] = `
" Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.Initializer\\"></a>

\`\`\`typescript
import { CfnPublicRepository } from '@aws-cdk/aws-ecr'

new CfnPublicRepository(scope: Construct, id: string, props?: CfnPublicRepositoryProps)
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>scope</code> | <code>@aws-cdk/core.Construct</code> | - scope in which this resource is defined. |
| <code>id</code> | <code>string</code> | - scoped id of the resource. |
| <code>props</code> | <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\">CfnPublicRepositoryProps</a></code> | - resource properties. |

---
"
`;

exports[`wing snapshot 1`] = `
Object {
  "displayName": "Initializer",
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": Array [
    Object {
      "default": undefined,
      "displayName": "props",
      "docs": Object {
        "summary": "- resource properties.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer.parameter.props",
      "optional": true,
      "type": Object {
        "formattingPattern": "%",
        "types": Array [
          Object {
            "displayName": "CfnPublicRepositoryProps",
            "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "packageName": "@aws-cdk/aws-ecr",
            "packageVersion": "99.99.99",
          },
        ],
      },
    },
  ],
  "usage": "bring { CfnPublicRepository } from \\"@aws-cdk/aws-ecr\\"

new CfnPublicRepository(props?: CfnPublicRepositoryProps)",
}
`;

exports[`wing snapshot 2`] = `
" Initializer <a name=\\"Initializer\\" id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.Initializer\\"></a>

\`\`\`wing
bring { CfnPublicRepository } from \\"@aws-cdk/aws-ecr\\"

new CfnPublicRepository(props?: CfnPublicRepositoryProps)
\`\`\`

| **Parameter** | **Type** | **Description** |
| --- | --- | --- |
| <code>props</code> | <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\">CfnPublicRepositoryProps</a></code> | - resource properties. |

---
"
`;
